--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "glob": "^7.2.0",
     "mongoose": "^6.0.12",
     "node-fetch": "^2.6.1",
+    "node-schedule": "^2.0.0",
     "pokemon": "^2.3.0",
     "pokemon.js": "^1.1.8"
   },
