--- a/package.json
+++ b/package.json
@@ -22,24 +22,24 @@
   },
   "homepage": "https://github.com/CSUN-Discord/PokeMasterMatty#readme",
   "dependencies": {
-    "@discordjs/builders": "^0.7.0",
+    "@discordjs/builders": "^1.6.1",
+    "@discordjs/rest": "^1.7.0",
     "async": "^3.2.3",
+    "bad-words": "^3.0.4",
     "base64-img": "^1.0.4",
-    "discord.js": "^13.2.0",
+    "discord-api-types": "^0.37.40",
+    "discord.js": "^14.9.0",
     "glob": "^7.2.0",
     "merge-images": "^2.0.0",
     "mongoose": "^6.0.12",
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.0.0",
-    "pokemon": "^2.3.0",
     "pokemon.js": "^1.1.8",
     "python-shell": "^3.0.1"
   },
   "devDependencies": {
-    "@discordjs/rest": "^0.1.0-canary.0",
     "ascii-table": "^0.0.9",
     "canvas": "^2.9.0",
-    "discord-api-types": "^0.24.0",
     "request": "^2.88.2"
   }
 }
