adding description to items in battle

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /python/battle_image_outputs/enemy_health_bars/*
 /python/battle_image_outputs/team_health_bars/*
 /python/battle_image_outputs/battle_png/*
+/venv/
