--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.0.0",
     "pokemon.js": "^1.1.8",
-    "python-shell": "^3.0.1"
+    "python-shell": "^3.0.1",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "ascii-table": "^0.0.9",
